Fixed spelling of some fields, fixed braces lining up.

--- a/src/ROMdb/Views/EstimationBaseView.fxml
+++ b/src/ROMdb/Views/EstimationBaseView.fxml
@@ -6,36 +6,39 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="estimationBaseView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="513.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationController">
+<Pane fx:id="estimationBaseView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="513.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationController">
    <children>
       <Label fx:id="label_baseline" layoutX="48.0" layoutY="28.0" text="Baseline" />
       <Label fx:id="label_cprs" layoutX="52.0" layoutY="98.0" text="CPRS#" />
       <Label fx:id="label_staffMonth" layoutX="36.0" layoutY="176.0" text="SLOCs/Staff-Month" />
       <Label fx:id="label_staffDay" layoutX="35.0" layoutY="201.0" text="SLOCs/Staff-Day" />
+      <Label fx:id="label_ddrCwtSlocs" layoutX="329.0" layoutY="402.0" text="DDR/CWT SLOCS" />
+      <Label fx:id="label_cpddDocument" layoutX="329.0" layoutY="301.0" text="CPDD Document" />
+      <Label fx:id="label_cpddDate" layoutX="329.0" layoutY="326.0" text="CPDD Date" />
+      <Label fx:id="label_budgetUpgrade" layoutX="329.0" layoutY="351.0" text="Budget Upgrade" />
+      <Label fx:id="label_budgetMaintenance" layoutX="329.0" layoutY="377.0" text="Budget Maintenance" />
+      <Label fx:id="label_designWeight" layoutX="329.0" layoutY="201.0" text="Design Weight" />
+      <Label fx:id="label_codeWeight" layoutX="329.0" layoutY="227.0" text="Code Weight" />
+      <Label fx:id="label_unitTestingWeight" layoutX="329.0" layoutY="251.0" text="Unit Test Weight" />
+      <Label fx:id="label_integrationWeight" layoutX="329.0" layoutY="276.0" text="Integration Weight" />
+      <Label fx:id="label_defaultSlocs" layoutX="329.0" layoutY="176.0" text="Default SLOCS" />
+
       <ComboBox fx:id="combo_estimateBaseline" layoutX="114.0" layoutY="24.0" prefWidth="150.0" />
-      <TextField fx:id="field_staffDay" layoutX="162.0" layoutY="197.0" prefHeight="25.0" prefWidth="53.0" />
-      <TextField fx:id="field_staffMonth" layoutX="162.0" layoutY="172.0" prefHeight="25.0" prefWidth="53.0" />
+
       <TextField fx:id="field_cprs" layoutX="115.0" layoutY="94.0" />
-      <Label fx:id="label_ddrCwtSlocs" layoutX="349.0" layoutY="402.0" text="DDR/CWT SLOCS" />
-      <Label fx:id="label_cpddDocument" layoutX="350.0" layoutY="301.0" text="CPDD Document" />
-      <Label fx:id="label_cpddDate" layoutX="377.0" layoutY="326.0" text="CPDD Date" />
-      <Label fx:id="label_budgetUpgrade" layoutX="351.0" layoutY="351.0" text="Budget Upgrade" />
-      <Label fx:id="label_budgetMaintenance" layoutX="328.0" layoutY="377.0" text="Budget Maintenance" />
-      <Label fx:id="label_designWeight" layoutX="352.0" layoutY="201.0" text="Design Weight" />
-      <Label fx:id="label_codeWeight" layoutX="360.0" layoutY="227.0" text="Code Weight" />
-      <Label fx:id="label_unitTestingWeight" layoutX="339.0" layoutY="251.0" text="Unit Test Weight" />
-      <Label fx:id="label_intergrationWeight" layoutX="331.0" layoutY="276.0" text="Intergration Weight" />
-      <Label fx:id="label_defaultSlocs" layoutX="353.0" layoutY="176.0" text="Default SLOCS" />
-      <TextField fx:id="field_intergrationWeight" layoutX="450.0" layoutY="272.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_unitTestingWeight" layoutX="450.0" layoutY="247.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_codeWeight" layoutX="450.0" layoutY="223.0" prefHeight="25.0" prefWidth="120.0" />
+      <TextField fx:id="field_staffMonth" layoutX="162.0" layoutY="172.0" prefHeight="25.0" prefWidth="53.0" />
+      <TextField fx:id="field_staffDay" layoutX="162.0" layoutY="197.0" prefHeight="25.0" prefWidth="53.0" />
       <TextField fx:id="field_defaultSlocs" layoutX="450.0" layoutY="172.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_designWeight" layoutX="450.0" layoutY="197.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="field_designWeight" layoutX="450.0" layoutY="197.0" prefHeight="25.0" prefWidth="120.0" />
+      <TextField fx:id="field_codeWeight" layoutX="450.0" layoutY="222.0" prefHeight="25.0" prefWidth="120.0" />
+      <TextField fx:id="field_unitTestingWeight" layoutX="450.0" layoutY="247.0" prefHeight="25.0" prefWidth="120.0" />
+      <TextField fx:id="field_integrationWeight" layoutX="450.0" layoutY="272.0" prefHeight="25.0" prefWidth="120.0" />
       <TextField fx:id="field_cpddDocument" layoutX="450.0" layoutY="297.0" prefHeight="25.0" prefWidth="120.0" />
       <TextField fx:id="field_cpddDate" layoutX="450.0" layoutY="322.0" prefHeight="25.0" prefWidth="120.0" />
       <TextField fx:id="field_budgetUpgrade" layoutX="450.0" layoutY="347.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_budgetMaint" layoutX="451.0" layoutY="373.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_ddrCwtSlocs" layoutX="450.0" layoutY="398.0" prefHeight="25.0" prefWidth="120.0" />
-      <Button fx:id="button_esimateSubmit" layoutX="384.0" layoutY="435.0" mnemonicParsing="false" onAction="#errorChecking" prefHeight="25.0" prefWidth="85.0" text="Submit" />
+      <TextField fx:id="field_budgetMaint" layoutX="450.0" layoutY="372.0" prefHeight="25.0" prefWidth="120.0" />
+      <TextField fx:id="field_ddrCwtSlocs" layoutX="450.0" layoutY="397.0" prefHeight="25.0" prefWidth="120.0" />
+
+      <Button fx:id="button_estimateSubmit" layoutX="450.0" layoutY="433.0" mnemonicParsing="false" onAction="#errorChecking" prefHeight="25.0" prefWidth="120.0" text="Save" />
    </children>
 </Pane>
