Finished writing to DB for Estimation Base and pulling information from the DB for Estimation Base

--- a/src/ROMdb/Views/EstimationBaseView.fxml
+++ b/src/ROMdb/Views/EstimationBaseView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="estimationBaseView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="513.0" prefWidth="700.0" style="-fx-background-color: lightgrey; -fx-border-color: grey; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationController">
+<Pane fx:id="estimationBaseView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="513.0" prefWidth="700.0" style="-fx-background-color: lightgrey; -fx-border-color: grey; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationController">
    <children>
       <Label fx:id="label_baseline" layoutX="48.0" layoutY="28.0" text="Baseline" />
       <Label fx:id="label_cprs" layoutX="52.0" layoutY="98.0" text="CPRS#" />
@@ -23,7 +23,7 @@
       <Label fx:id="label_integrationWeight" layoutX="329.0" layoutY="276.0" text="Integration Weight" />
       <Label fx:id="label_defaultSlocs" layoutX="329.0" layoutY="176.0" text="Default SLOCS" />
 
-      <ComboBox fx:id="combo_estimateBaseline" layoutX="114.0" layoutY="24.0" prefWidth="150.0" />
+      <ComboBox fx:id="combo_estimateBaseline" layoutX="114.0" layoutY="24.0" onAction="#fillTextFieldsFromDB" prefWidth="150.0" />
 
       <TextField fx:id="field_cprs" layoutX="115.0" layoutY="94.0" />
       <TextField fx:id="field_staffMonth" layoutX="162.0" layoutY="172.0" prefHeight="25.0" prefWidth="53.0" />
@@ -39,6 +39,6 @@
       <TextField fx:id="field_budgetMaint" layoutX="450.0" layoutY="372.0" prefHeight="25.0" prefWidth="120.0" />
       <TextField fx:id="field_ddrCwtSlocs" layoutX="450.0" layoutY="397.0" prefHeight="25.0" prefWidth="120.0" />
 
-      <Button fx:id="button_estimateSubmit" layoutX="450.0" layoutY="433.0" mnemonicParsing="false" onAction="#errorChecking" prefHeight="25.0" prefWidth="120.0" text="Save" />
+      <Button fx:id="button_estimateSubmit" layoutX="450.0" layoutY="433.0" mnemonicParsing="false" onAction="#writeTextfieldsToDB" prefHeight="25.0" prefWidth="120.0" text="Save" />
    </children>
 </Pane>
