--- a/src/ROMdb/Views/SCICREntry.fxml
+++ b/src/ROMdb/Views/SCICREntry.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
    <children>
       <TableView fx:id="table_ScIcr" editable="true" layoutX="16.0" layoutY="96.0" prefHeight="391.0" prefWidth="598.0">
         <columns>
@@ -17,5 +18,6 @@
         </columns>
       </TableView>
       <ComboBox fx:id="combo_ScIcrBaseline" layoutX="14.0" layoutY="53.0" onAction="#buildTable" prefWidth="150.0" promptText="Baseline" />
+      <Button fx:id="button_newSCICR" layoutX="512.0" layoutY="53.0" mnemonicParsing="false" text="New SC/ICR" />
    </children>
 </Pane>
