--- a/src/ROMdb/Views/AddBaselineView.fxml
+++ b/src/ROMdb/Views/AddBaselineView.fxml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:id="anchor_newBaseline" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="169.0" prefWidth="383.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddBaselineController">
+<AnchorPane fx:id="anchor_newBaseline" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="278.0" prefWidth="390.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddBaselineController">
    <children>
-      <ComboBox fx:id="combo_existingBaselines" layoutX="151.0" layoutY="72.0" prefWidth="150.0" />
-      <Label fx:id="label_existingBaselines" layoutX="48.0" layoutY="76.0" text="Baseline:" />
-      <TextField fx:id="field_addBaseline" layoutX="151.0" layoutY="31.0" />
-      <Label fx:id="label_addBaseline" layoutX="48.0" layoutY="35.0" text="Add Baseline:" />
-      <Button fx:id="button_cancelNewBaseline" layoutX="151.0" layoutY="118.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="71.0" text="Cancel" />
-      <Button fx:id="button_addNewBaseline" layoutX="230.0" layoutY="118.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Add" />
+      <TextField fx:id="field_addBaseline" layoutX="21.0" layoutY="223.0" prefHeight="25.0" prefWidth="171.0" promptText="Enter baseline" />
+      <Button fx:id="button_cancelNewBaseline" layoutX="285.0" layoutY="223.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="76.0" text="Cancel" />
+      <Button fx:id="button_addNewBaseline" layoutX="201.0" layoutY="223.0" mnemonicParsing="false" onAction="#writeBaseline" prefHeight="25.0" prefWidth="76.0" text="Add/Edit" />
+      <ListView fx:id="list_baselineList" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="356.0" />
    </children>
 </AnchorPane>
