--- a/src/ROMdb/Views/SCICREntry.fxml
+++ b/src/ROMdb/Views/SCICREntry.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" style="-fx-background-color: lightgrey; -fx-border-color: grey; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
    <children>
-      <TableView fx:id="table_ScIcr" editable="true" layoutX="16.0" layoutY="96.0" prefHeight="391.0" prefWidth="598.0">
+      <TableView fx:id="table_ScIcr" editable="true" layoutX="14.0" layoutY="48.0" prefHeight="456.0" prefWidth="598.0">
         <columns>
           <TableColumn fx:id="tableColumn_scicr" prefWidth="111.0" text="SC/ICR" />
           <TableColumn fx:id="tableColumn_number" prefWidth="68.0" text="Number" />
@@ -17,7 +17,7 @@
             <TableColumn fx:id="tableColumn_baseline" prefWidth="120.0" text="Baseline" />
         </columns>
       </TableView>
-      <ComboBox fx:id="combo_ScIcrBaseline" layoutX="14.0" layoutY="53.0" onAction="#switchTableData" prefWidth="150.0" promptText="Baseline" />
-      <Button fx:id="button_newSCICR" layoutX="512.0" layoutY="53.0" mnemonicParsing="false" onAction="#createNewSCICR" text="New SC/ICR" />
+      <ComboBox fx:id="combo_ScIcrBaseline" layoutX="13.0" layoutY="11.0" onAction="#switchTableData" prefWidth="150.0" promptText="Baseline" />
+      <Button fx:id="button_newSCICR" layoutX="530.0" layoutY="11.0" mnemonicParsing="false" onAction="#createNewSCICR" text="New SC/ICR" />
    </children>
 </Pane>
