--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="700.0" style="-fx-background-color: lightgrey; -fx-border-style: solid; -fx-border-color: grey;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.RequirementsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" style="-fx-background-color: lightgrey; -fx-border-style: solid; -fx-border-color: grey;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.RequirementsController">
    <children>
-      <TabPane id="pane_requirementsEntry" fx:id="requirementsEntryView" layoutX="2.0" layoutY="1.0" prefHeight="502.0" prefWidth="700.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane id="pane_requirementsEntry" fx:id="requirementsEntryView" layoutX="2.0" layoutY="1.0" prefHeight="515.0" prefWidth="625.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
             <Tab text="Main">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0">
                      <children>
                         <ComboBox layoutX="100.0" layoutY="14.0" prefHeight="25.0" prefWidth="100.0" />
                         <Label layoutX="14.0" layoutY="18.0" text="SC/ICR" />
@@ -22,20 +22,23 @@
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="\% Complete" />
+            <Tab text="\% Complete">
+               <content>
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" />
+               </content></Tab>
             <Tab text="Hdr/Ftr">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" />
                </content>
             </Tab>
             <Tab text="Paragraph">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" />
                </content>
             </Tab>
             <Tab text="SC/ICR">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="632.0" />
                </content>
             </Tab>
          </tabs>
